# run-here

./: .gitignore  Cargo.toml  README.md  flake.nix  result
.github/workflows/: build.yml
src/: cli.rs  compositor.rs  direnv.rs  errors.rs  execute.rs  hypr.rs  lib.rs  main.rs  main_hypr.rs  main_sway.rs  pid.rs  processes.rs  sway.rs  windows.rs
