[package]
name = "run-here"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "sway-run-here"
path = "src/main_sway.rs"

[[bin]]
name = "hypr-run-here"
path = "src/main_hypr.rs"

[dependencies]
multimap = "0.9.1"
procfs = "0.16.0"
swayipc = "3.0.1"
exec = "0.3.1"
thiserror = "1.0"
anyhow = "1.0"
errno = "0.2.8"
clap = { version = "4.4.8", features = ["derive", "string"] }
users = "0.11.0"
xdg = "2.5"
hyprland = {version = "0.4.0-beta.2"}
derive_more = { version = "2.0.1", features = ["from"]}
